# zero2prod

./: .envrc  Cargo.toml  Dockerfile  README.md  compose.yaml  configuration.yaml
.sqlx/: query-e209e1cd6406392a118b5098c1e95d1ab68879000d3260f0d49bdf30e9e1c955.json
configuration/: base.yaml
scripts/: config.rs  init_db.sh  structure.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
