[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
default-run = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
chrono = "0.4.34"
uuid = "1.7.0"

[dependencies.sqlx]
version = "^0.7.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[[bin]]
path = "scripts/config.rs"
name = "config"
