[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
default-run = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
tracing-actix-web = "0.7.16"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4"] }
log = "0.4.27"
env_logger = "0.11.8"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "=0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }

[dependencies.sqlx]
version = "^0.8.3"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]

[dev-dependencies]
once_cell = "1.21.3"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[[bin]]
path = "scripts/config.rs"
name = "config"
